--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,4 +11,5 @@
       archivePrefix={arXiv},
       primaryClass={math.ST},
       url={https://arxiv.org/abs/2506.04194}, 
+      selected={true}
 }
